--- a/index.html
+++ b/index.html
@@ -95,32 +95,25 @@ effectively to a dynamic development team.
         </div>
     </section>
 
-    <section>
+    <section id="about">
         <div class="container">
             <div class="left-side">
                 <div class="title">
-                    <h1>Timing og gold & <br> silver prices</h1>
-                    <h2>An unstoppable duo</h2>
+                    <h1>Biography</h1>
                 </div>
-                <div class="type g-type">
-                    <p>Gold</p>
-                    <p>Gold is seen as a hedge against inflation and a store of value through 
-                    thick and through thin.</p>
-                </div>
-
-                <div class="line line-blue"></div>
-
-                <div class="type s-type">
-                    <p>Silver</p>
-                    <p>
-                        Silver prices are much more `volatile` than those of gold 
-                      in the short term.
-                    </p>
-                </div>
-                <div class="line"></div>
+                <p class="p">
+                    "I’m Tanishk Singh Rathore, a driven Web Developer based in Jaipur, Rajasthan, currently in my final year of B.Tech in Computer Science at Arya College of Engineering, set to graduate in 2025. My journey started at Bright Sun Sr. Sec. School, where I completed my Secondary (10th, 2019) and Higher Secondary (12th, 2021) education, sparking my curiosity for programming. Over the past year, I’ve dived deep into web development, interning at Linux World in 2024, where I developed a counselling website and apps like a weather tool and music player using HTML, CSS, JavaScript, and MongoDB. My projects include an Online Counselling Service for career guidance, a Netflix Clone with responsive design, and a Library Management System for efficient tracking—all powered by skills in React.js, Bootstrap, and Tailwind CSS. Beyond coding, I’ve competed in hackathons, earned NPTEL certifications in C++ and Java, and trained in MERN Stack and Python through Spoken Tutorials at IIT Bombay. With a knack for problem-solving and teamwork, I’m excited to build innovative solutions and grow in the tech world."
+                </p>
             </div>
-            <div class="right-side rotation">
-                <img class="gold3 image" src="./img/next.jpeg" alt="">
+            <div class="right-side">
+                <h2>Technologies Used</h2>
+                <ul class="tech-list">
+                    <li><strong>Languages:</strong> C++, Java, JavaScript, HTML, CSS</li>
+                    <li><strong>Key Skills:</strong> Front-End Development, Responsive Design, DSA</li>
+                    <li><strong>Packages:</strong> React.js, Bootstrap, Tailwind CSS</li>
+                    <li><strong>Databases:</strong> MySQL, MongoDB</li>
+                    <li><strong>Soft Skills:</strong> Communication, Team Coordination</li>
+                </ul>
             </div>
         </div>
     </section>
