--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="container">
             <div class="left-side">
                 <div class="title">
-                    <h1>Tanishk Rathore 
+                    <h1>Hey Sunshine , I'm Tanishk  
                          <img src="./img/star.png" alt="" class="star">
                          </h1>
                 </div>
@@ -123,15 +123,13 @@ effectively to a dynamic development team.
             <div class="left-side">
                 <img src="./img/star.png" class="star-s4 star" alt="">
                 <div class="title">
-                    <h1>3 direction</h1>
-                    <h2>Choose your gold</h2>
+                    <h1>My Latest Projects</h1>
+                    <h2>Full Stack</h2>
                 </div>
             </div>
             <div class="right-side">
                 <p>
-                    The fineness of gold depends on the amount of ligature - additional metals. 
-                    For example, yellow gold 585* is a metal with the addition 
-                    of 28% silver and 113.5% copper.
+                  <i> Sometimes people can't judge you directly , they need to see your projects. Lets see what i created</i> 
                 </p>
 
                 <div class="line"></div>
@@ -142,85 +140,59 @@ effectively to a dynamic development team.
                 <div class="rotation">
                     <img src="./img/card-1.png" alt="" class="img-card image">
                 </div>
-                <div class="color">yellow</div>
-                <span>585 standard gold</span>
+                <div class="color">Counselling Website</div>
+                <span>Front end Development</span>
             </div>
             <div class="card card-2">
                 <div class="rotation">
                     <img src="./img/card-2.png" alt="" class="img-card image">
                 </div>
-                <div class="color">white</div>
-                <span>585 standard gold</span>
+                <div class="color">Clothing Website</div>
+                <span>Full Stack</span>
             </div>
             <div class="card card-3">
                 <div class="rotation">
                     <img src="./img/card-3.png" alt="" class="img-card image">
                 </div>
-                <div class="color">pink</div>
-                <span>750 standard gold</span>
+                <div class="color">Job Seeking Application</div>
+                <span>Full Stack </span>
             </div>
         </div>
     </section>
 
-    <section class="footer-section">
+    <section class="updates-section" id="updates">
         <div class="container" style="padding-bottom:5rem;">
-            <img src="./img/star.png" alt="" class="star star-s5">
             <div class="left-side">
                 <div class="title">
-                    <h1>stay up-to date</h1>
-                    <h2>With everything precious metals</h2>
+                    <h1>Stay Up-to-Date</h1>
+                    <h2>My Latest Learning Journey</h2>
                 </div>
             </div>
             <div class="right-side">
-                <p class="txt">
-                    Replenish <span>your portfolio</span>
-                    with gold and silver <span>to diversity</span>
-                    your investment portfolio.
-                </p>
-            </div>
-        </div>
-
-        <div class="line"></div>
-
-        <div class="container sides">
-            <div class="left-side">
-                <div class="logo">
-                    <img src="./img/star.png" class="star" alt="">
-                    <div>Frost Inv.</div>
+                <div class="update-item">
+                    <h3>GSAP Animations</h3>
+                    <p>Recently explored GSAP to add smooth animations to my portfolio, enhancing user experience.</p>
                 </div>
-
-                <p class="p">
-                    We are based in Los Angeles, USA.<br>
-                    our motto is -investing in knowledge <br>
-                    pays the best dividends.
-                </p>
-            </div>
-            <div class="right-side">
-                <ul class="menu">
-                    <li><a href="#">Resources</a></li>
-                    <li><a href="#">company</a></li>
-                    <li><a href="#">help</a></li>
-                    <li><a href="#">client</a></li>
-                    <li><a href="#">about</a></li>
-                    <li><a href="#">support</a></li>
-                    <li><a href="#">blog</a></li>
-                    <li><a href="#">services</a></li>
-                    <li><a href="#">jobs</a></li>
-                    <li><a href="#">docs</a></li>
-                    <li><a href="#">news</a></li>
-                    <li><a href="#">privacy policy</a></li>
-                </ul>
+                <div class="update-item">
+                    <h3>MERN Stack Training</h3>
+                    <p>Completed training in MERN stack, building full-stack apps with MongoDB, Express, React, and Node.js.</p>
+                </div>
+                <div class="update-item">
+                    <h3>Competitive Programming</h3>
+                    <p>Sharpening DSA skills with Java through Regex Software’s competitive programming course.</p>
+                </div>
             </div>
         </div>
     </section>
+   
 
     <footer>
         <div class="container">
             <div class="left-side">
-                <p> &copy; copyright 2022 . All rights reserved</p>
+                <p> &copy; No Copyright . No rights reserved</p>
             </div>
             <div class="right-side center">
-                <p>Term and Conditions</p>
+                <p> NO Term and Conditions</p>
             </div>
         </div>
     </footer>
